added comment explaining how to add more items to the changelog

--- a/index.html
+++ b/index.html
@@ -20,6 +20,16 @@
 </div>
 <div class="changelog-content">Announcing Projects on Frontend Roadmap</div>
         </div>
+
+        <div class="changelog-row">
+<div class="changelog-date">September 3, 2024</div>
+<div class="line-item">
+    <div class="line">
+    <span class="dot"></span>
+    </div>
+</div>
+<div class="changelog-content">Announcing Projects on Frontend Roadmap</div>
+        </div>
     </div>
 </body>
 </html>
