Added button and moved the changelog container to center.

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </div>
 <div class="changelog-content">Announcing Projects on Frontend Roadmap</div>
         </div>
-
+<!-- Copy to here-->
         <div class="changelog-row">
 <div class="changelog-date">September 3, 2024</div>
 <div class="line-item">
@@ -30,6 +30,53 @@
 </div>
 <div class="changelog-content">Announcing Projects on Frontend Roadmap</div>
         </div>
+           <div class="changelog-row">
+<div class="changelog-date">September 3, 2024</div>
+<div class="line-item">
+    <div class="line">
+    <span class="dot"></span>
     </div>
+</div>
+<div class="changelog-content">Announcing Projects on Frontend Roadmap</div>
+        </div>
+           <div class="changelog-row">
+<div class="changelog-date">September 3, 2024</div>
+<div class="line-item">
+    <div class="line">
+    <span class="dot"></span>
+    </div>
+</div>
+<div class="changelog-content">Announcing Projects on Frontend Roadmap</div>
+        </div>
+           <div class="changelog-row">
+<div class="changelog-date">September 3, 2024</div>
+<div class="line-item">
+    <div class="line">
+    <span class="dot"></span>
+    </div>
+</div>
+<div class="changelog-content">Announcing Projects on Frontend Roadmap</div>
+        </div>
+           <div class="changelog-row">
+<div class="changelog-date">September 3, 2024</div>
+<div class="line-item">
+    <div class="line">
+    <span class="dot"></span>
+    </div>
+</div>
+<div class="changelog-content">Announcing Projects on Frontend Roadmap</div>
+        </div>
+           <div class="changelog-row">
+<div class="changelog-date">September 3, 2024</div>
+<div class="line-item">
+    <div class="line">
+    <span class="dot"></span>
+    </div>
+</div>
+<div class="changelog-content">Announcing Projects on Frontend Roadmap</div>
+        </div>
+    </div>
+
+    <button id="button">Visit Complete changelog</button>
 </body>
 </html>
