--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet">
+
 </head>
 <body>
     <div id="changelog-container">
@@ -22,58 +24,58 @@
         </div>
 <!-- Copy to here-->
         <div class="changelog-row">
-<div class="changelog-date">September 3, 2024</div>
+<div class="changelog-date">August 28, 2024</div>
 <div class="line-item">
     <div class="line">
     <span class="dot"></span>
     </div>
 </div>
-<div class="changelog-content">Announcing Projects on Frontend Roadmap</div>
+<div class="changelog-content">Build your learning habits with learning</div>
         </div>
            <div class="changelog-row">
-<div class="changelog-date">September 3, 2024</div>
+<div class="changelog-date">August 25, 2024</div>
 <div class="line-item">
     <div class="line">
     <span class="dot"></span>
     </div>
 </div>
-<div class="changelog-content">Announcing Projects on Frontend Roadmap</div>
+<div class="changelog-content">Git and Github Roadmap</div>
         </div>
            <div class="changelog-row">
-<div class="changelog-date">September 3, 2024</div>
+<div class="changelog-date">August 22, 2024</div>
 <div class="line-item">
     <div class="line">
     <span class="dot"></span>
     </div>
 </div>
-<div class="changelog-content">Announcing Projects on Frontend Roadmap</div>
+<div class="changelog-content">Submit your project solution and get feedback</div>
         </div>
            <div class="changelog-row">
-<div class="changelog-date">September 3, 2024</div>
+<div class="changelog-date">August 15, 2024</div>
 <div class="line-item">
     <div class="line">
     <span class="dot"></span>
     </div>
 </div>
-<div class="changelog-content">Announcing Projects on Frontend Roadmap</div>
+<div class="changelog-content">Backend Project Ideas</div>
         </div>
            <div class="changelog-row">
-<div class="changelog-date">September 3, 2024</div>
+<div class="changelog-date">August 10, 2024</div>
 <div class="line-item">
     <div class="line">
     <span class="dot"></span>
     </div>
 </div>
-<div class="changelog-content">Announcing Projects on Frontend Roadmap</div>
+<div class="changelog-content">Redis Roadmap</div>
         </div>
            <div class="changelog-row">
-<div class="changelog-date">September 3, 2024</div>
+<div class="changelog-date">August 1, 2024</div>
 <div class="line-item">
     <div class="line">
     <span class="dot"></span>
     </div>
 </div>
-<div class="changelog-content">Announcing Projects on Frontend Roadmap</div>
+<div class="changelog-content">Changelog page to help you stay in the loop</div>
         </div>
         <button id="button">Visit Complete changelog</button>
     </div>
