--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 </div>
 <div class="changelog-content">Changelog page to help you stay in the loop</div>
         </div>
-        <button id="button">Visit Complete changelog</button>
+        <button id="button">Visit Complete Changelog</button>
     </div>
 </body>
 </html>
