added settings to control the timeline and make it stretch to the height of the row and its content.

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <!--Copy this for more items-->
         <div class="changelog-row">
 <div class="changelog-date">September 3, 2024</div>
-<div class="line-item">
+<div class="timeline">
     <div class="line">
     <span class="dot"></span>
     </div>
@@ -25,7 +25,7 @@
 <!-- Copy to here-->
         <div class="changelog-row">
 <div class="changelog-date">August 28, 2024</div>
-<div class="line-item">
+<div class="timeline">
     <div class="line">
     <span class="dot"></span>
     </div>
@@ -34,7 +34,7 @@
         </div>
            <div class="changelog-row">
 <div class="changelog-date">August 25, 2024</div>
-<div class="line-item">
+<div class="timeline">
     <div class="line">
     <span class="dot"></span>
     </div>
@@ -43,7 +43,7 @@
         </div>
            <div class="changelog-row">
 <div class="changelog-date">August 22, 2024</div>
-<div class="line-item">
+<div class="timeline">
     <div class="line">
     <span class="dot"></span>
     </div>
@@ -52,7 +52,7 @@
         </div>
            <div class="changelog-row">
 <div class="changelog-date">August 15, 2024</div>
-<div class="line-item">
+<div class="timeline">
     <div class="line">
     <span class="dot"></span>
     </div>
@@ -61,7 +61,7 @@
         </div>
            <div class="changelog-row">
 <div class="changelog-date">August 10, 2024</div>
-<div class="line-item">
+<div class="timeline">
     <div class="line">
     <span class="dot"></span>
     </div>
@@ -70,7 +70,7 @@
         </div>
            <div class="changelog-row">
 <div class="changelog-date">August 1, 2024</div>
-<div class="line-item">
+<div class="timeline">
     <div class="line">
     <span class="dot"></span>
     </div>
